--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "grunt-contrib-copy": "0.5.0",
     "grunt-contrib-watch": "0.5.3",
     "grunt-nodemon": "0.3.0",
-    "grunt-sass": "0.18.0",
+    "grunt-sass": "^1.1.0",
     "grunt-text-replace": "0.3.12",
     "minimist": "0.0.8",
     "node-sass": "2.1.1",
