--- a/package.json
+++ b/package.json
@@ -26,5 +26,12 @@
     "readdir": "0.0.6",
     "swig": "^1.4.2",
     "swig-extras": "0.0.1"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "*"
+  },
+  "scripts": {
+    "test": "mocha"
   }
 }
